--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,10 +56,13 @@ dependencies {
     implementation 'androidx.compose.material:material:1.1.1'
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_ui_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_ui_version"
+    implementation "androidx.compose.runtime:runtime-livedata:$compose_ui_version"
 
     //Hilt-Dagger
     implementation "com.google.dagger:hilt-android:$hilt_version"
     kapt "com.google.dagger:hilt-compiler:$hilt_version"
+    kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
+    implementation "androidx.hilt:hilt-navigation-compose:1.0.0"
 
     //Room
     implementation "androidx.room:room-runtime:$room_version"
@@ -76,6 +79,7 @@ dependencies {
 
     //Coil
     implementation 'io.coil-kt:coil-compose:2.2.2'
+    implementation "io.coil-kt:coil-gif:2.1.0"
 
     //Navigation
     implementation "androidx.navigation:navigation-compose:2.5.3"
