--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ android {
     }
     kotlinOptions {
         jvmTarget = '1.8'
+        freeCompilerArgs = ['-Xjvm-default=compatibility']
     }
     buildFeatures {
         compose true
@@ -47,16 +48,27 @@ android {
     }
 }
 
+kapt {
+    correctErrorTypes = true
+}
+
 dependencies {
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
-    implementation 'androidx.activity:activity-compose:1.3.1'
+    implementation "androidx.activity:activity-compose:1.4.0"
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.1'
     implementation "androidx.compose.ui:ui:$compose_ui_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_ui_version"
     implementation 'androidx.compose.material:material:1.1.1'
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_ui_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_ui_version"
     implementation "androidx.compose.runtime:runtime-livedata:$compose_ui_version"
+    // Java language implementation
+    implementation "androidx.savedstate:savedstate:1.2.0"
+
+    // Kotlin
+    implementation "androidx.savedstate:savedstate-ktx:1.2.0"
 
     //Hilt-Dagger
     implementation "com.google.dagger:hilt-android:$hilt_version"
@@ -89,4 +101,7 @@ dependencies {
 
     //GSON Converter
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+    implementation "com.louiscad.splitties:splitties-systemservices:3.0.0-beta01"
+    implementation "com.louiscad.splitties:splitties-views:3.0.0-beta01"
 }
