--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ buildscript {
         compose_ui_version = '1.1.1'
         room_version = '2.4.3'
         hilt_version = '2.44'
+        kotlin_version = "1.6.10"
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
